--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta name="description" content="OLO4D merupakan tempat daftar situs slot online terbaik di indonesia memberikan gampang menang malam ini langsung di OLO4D." >
 	  <meta name="keywords" content="OLO4D, daftar OLO4D, link OLO4D, situs OLO4D, slot resmi, Slot Gacor">
       <link rel="canonical" href="http://olo4donline.wider-challenge.org/">
-      <link rel="amphtml" href="https://gacoerkali.xyz/amp/olo4d/">
+      <link rel="amphtml" href="https://gacoerkali.xyz/amp/olo4d">
       <meta content="id_ID" property="og:locale">
       <meta content="website" property="og:type">
       <meta content="https://i.imgur.com/4tSGQwy.jpg" property="og:image" />
